--- a/lab1-weight-prediction-model.ipynb
+++ b/lab1-weight-prediction-model.ipynb
@@ -245,13 +245,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "62366ee5",
+   "cell_type": "markdown",
+   "id": "d38f9aec",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 6. Interpretar el valor p"
+    "6. Interpretar el valor p\n",
+    "\n",
+    "El valor P obtenido es de 1.10e-17. Debido a que es menor a 0.01, se puede determinar que sí existe una correlación entre la altura y peso de una persona (dada la hipótesis nula \"no existe una correlación entre la altura y peso\"). \n",
+    "\n",
+    "Esto se debe a que, según Toolbox Eupati, un resultado es \"estadísticamente significativo\" si el valor p es igual o inferior a valores como 0.01 o 0.05. En otras palabras, un valor bajo -como este- indica que la probabilidad de que la hipótesis nula sea correcta es extremadamente baja. \n",
+    "\n",
+    "\n",
+    "Referencia:\n",
+    "\n",
+    "https://toolbox.eupati.eu/glossary/valor-p/?lang=es"
    ]
   }
  ],
